# opsys_hw_1

./: .gitignore  CMakeLists.txt  Problem1.c  Problem2  Problem2.c  Problem3  Problem3.c  Problem4  Problem4.c  Problem5.xlsx  README.txt  list.c  list.h  problem5explanation.txt  sets  sets.c  with_arrays.csv  with_lists.csv
test/: runTests.c
test/linkedlist/: doubly_linked_list_test.c  doubly_linked_list_test.h
test/utility/: test_runner.c  test_runner.h
